--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,5 @@ EXCHANGE_EC2 = Prueba
 PORT = 3000
  HOST = michibase.cdgcmea2elpr.us-east-1.rds.amazonaws.com
  USER = admin
- DB = michibase
+ DB = dzulDB
  DB_PSW = 12345678
